--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-openai==0.10.2
-SpeechRecognition==3.8.1
-pyttsx3==2.90
-opencv-python==4.5.3.56
-textblob==0.15.3
-requests==2.25.1
-tk==0.1.0
+beautifulsoup4
+fuzzywuzzy
+google-generativeai
+psutil
+pyautogui
+pywhatkit
+pyttsx3
+requests
+spacy
+spotipy
+speechrecognition
+wikipedia-api
+opencv-python
